--- a/DreamListener/DreamListener/Base.lproj/Main.storyboard
+++ b/DreamListener/DreamListener/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sXn-ul-Bip">
                                                     <rect key="frame" x="8" y="13" width="327" height="128"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tesla" translatesAutoresizingMaskIntoConstraints="NO" id="uAB-EJ-27x">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tesla-1" translatesAutoresizingMaskIntoConstraints="NO" id="uAB-EJ-27x">
                                                             <rect key="frame" x="8" y="11" width="105" height="107"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="105" id="2pd-Sz-t6V"/>
@@ -132,16 +132,147 @@
                     <navigationItem key="navigationItem" title="DreamListener" id="mmQ-TB-SDb">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="mAX-xO-tvV">
                             <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <segue destination="ua0-gU-i71" kind="show" identifier="ItemDetailsVCNew" id="Srl-FY-91C"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="segment" destination="QIS-Sx-NBa" id="8Rg-PS-DUG"/>
                         <outlet property="tableView" destination="39V-BJ-kqe" id="aDc-eg-bMS"/>
+                        <segue destination="ua0-gU-i71" kind="show" identifier="ItemDetailsVC" id="lrC-Hz-GsL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1088.8" y="789.35532233883066"/>
+        </scene>
+        <!--Add/Edit-->
+        <scene sceneID="EXM-2A-csi">
+            <objects>
+                <viewController id="ua0-gU-i71" customClass="ItemDetailsVC" customModule="DreamListener" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="pbV-PS-bgR"/>
+                        <viewControllerLayoutGuide type="bottom" id="ts1-92-vqH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="KBz-eD-9Jl">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imagePick" translatesAutoresizingMaskIntoConstraints="NO" id="puD-SZ-PVw">
+                                <rect key="frame" x="16" y="72" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="tL9-ui-uyA"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="doU-N7-GGh">
+                                <rect key="frame" x="172.5" y="318.5" width="30" height="30"/>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Title" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w2o-TB-7mJ" customClass="CustomTextField" customModule="DreamListener" customModuleProvider="target">
+                                <rect key="frame" x="124" y="82" width="235" height="44"/>
+                                <color key="backgroundColor" red="0.85576546034484946" green="0.85576546034484946" blue="0.85576546034484946" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="q4z-oo-Vnl"/>
+                                </constraints>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Price" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U7f-Ym-ABC" customClass="CustomTextField" customModule="DreamListener" customModuleProvider="target">
+                                <rect key="frame" x="124" y="134" width="235" height="44"/>
+                                <color key="backgroundColor" red="0.8557654603" green="0.8557654603" blue="0.8557654603" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="3aI-UL-FTN"/>
+                                    <constraint firstAttribute="width" constant="235" id="HTT-Mq-6Hk"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="235" id="Jis-WH-swW"/>
+                                    <constraint firstAttribute="height" constant="44" id="SXH-d6-S3W"/>
+                                </constraints>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Details" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PBg-b0-eq7" customClass="CustomTextField" customModule="DreamListener" customModuleProvider="target">
+                                <rect key="frame" x="16" y="186" width="343" height="107"/>
+                                <color key="backgroundColor" red="0.8557654603" green="0.8557654603" blue="0.8557654603" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="343" id="0nV-oO-O1Q"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="WuK-sj-xzs"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="107" id="YsL-VK-wC4"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="235" id="dEn-eV-TVo"/>
+                                    <constraint firstAttribute="height" constant="107" id="suh-ia-PdA"/>
+                                </constraints>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pRI-Fu-TVz">
+                                <rect key="frame" x="0.0" y="372" width="375" height="216"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="216" id="MTc-iJ-KHQ"/>
+                                </constraints>
+                            </pickerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OGd-NM-pBH">
+                                <rect key="frame" x="16" y="596" width="343" height="51"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="51" id="7h0-fF-MfV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                <state key="normal" title="Save Item">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Store" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5dn-IW-EbB">
+                                <rect key="frame" x="104" y="318" width="167" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="46" id="HOu-6N-IMm"/>
+                                    <constraint firstAttribute="width" constant="167" id="uMS-1u-0VY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="PBg-b0-eq7" firstAttribute="leading" secondItem="puD-SZ-PVw" secondAttribute="leading" id="1Ai-rc-FQB"/>
+                            <constraint firstItem="w2o-TB-7mJ" firstAttribute="trailing" secondItem="KBz-eD-9Jl" secondAttribute="trailingMargin" id="2Qr-ev-3mD"/>
+                            <constraint firstItem="OGd-NM-pBH" firstAttribute="trailing" secondItem="KBz-eD-9Jl" secondAttribute="trailingMargin" id="3MR-ga-2Vq"/>
+                            <constraint firstItem="U7f-Ym-ABC" firstAttribute="top" secondItem="w2o-TB-7mJ" secondAttribute="bottom" constant="8" id="3Or-dj-MXC"/>
+                            <constraint firstItem="ts1-92-vqH" firstAttribute="top" secondItem="OGd-NM-pBH" secondAttribute="bottom" constant="20" id="5XI-Ba-uyI"/>
+                            <constraint firstItem="U7f-Ym-ABC" firstAttribute="leading" secondItem="puD-SZ-PVw" secondAttribute="trailing" constant="8" id="5tq-53-xOr"/>
+                            <constraint firstItem="PBg-b0-eq7" firstAttribute="trailing" secondItem="KBz-eD-9Jl" secondAttribute="trailingMargin" id="74d-Gh-s7s"/>
+                            <constraint firstItem="PBg-b0-eq7" firstAttribute="trailing" secondItem="U7f-Ym-ABC" secondAttribute="trailing" id="76w-77-86a"/>
+                            <constraint firstItem="U7f-Ym-ABC" firstAttribute="trailing" secondItem="KBz-eD-9Jl" secondAttribute="trailingMargin" id="CFb-k7-0hz"/>
+                            <constraint firstItem="PBg-b0-eq7" firstAttribute="top" secondItem="U7f-Ym-ABC" secondAttribute="bottom" constant="8" id="LpE-M7-WDZ"/>
+                            <constraint firstItem="puD-SZ-PVw" firstAttribute="top" secondItem="pbV-PS-bgR" secondAttribute="bottom" constant="8" id="Ryp-c4-I2H"/>
+                            <constraint firstItem="5dn-IW-EbB" firstAttribute="centerX" secondItem="KBz-eD-9Jl" secondAttribute="centerX" id="Zf4-L5-AWd"/>
+                            <constraint firstItem="doU-N7-GGh" firstAttribute="centerX" secondItem="KBz-eD-9Jl" secondAttribute="centerX" id="bde-1f-Vfh"/>
+                            <constraint firstItem="pRI-Fu-TVz" firstAttribute="top" secondItem="5dn-IW-EbB" secondAttribute="bottom" constant="8" id="dcf-LL-ThB"/>
+                            <constraint firstItem="doU-N7-GGh" firstAttribute="centerY" secondItem="KBz-eD-9Jl" secondAttribute="centerY" id="fhw-DE-tey"/>
+                            <constraint firstItem="w2o-TB-7mJ" firstAttribute="top" secondItem="pbV-PS-bgR" secondAttribute="bottom" constant="18" id="gSf-fC-DLi"/>
+                            <constraint firstItem="w2o-TB-7mJ" firstAttribute="leading" secondItem="puD-SZ-PVw" secondAttribute="trailing" constant="8" id="kRb-HK-ZSG"/>
+                            <constraint firstAttribute="trailing" secondItem="pRI-Fu-TVz" secondAttribute="trailing" id="nku-dJ-EQF"/>
+                            <constraint firstItem="OGd-NM-pBH" firstAttribute="leading" secondItem="KBz-eD-9Jl" secondAttribute="leadingMargin" id="p2q-zt-J3C"/>
+                            <constraint firstItem="OGd-NM-pBH" firstAttribute="top" secondItem="pRI-Fu-TVz" secondAttribute="bottom" constant="8" id="sRd-kp-r4U"/>
+                            <constraint firstItem="pRI-Fu-TVz" firstAttribute="leading" secondItem="KBz-eD-9Jl" secondAttribute="leading" id="vwg-WB-ntb"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add/Edit" id="FiU-9s-vJ2">
+                        <barButtonItem key="rightBarButtonItem" systemItem="trash" id="yI9-DV-u08">
+                            <color key="tintColor" red="0.85576546034484946" green="0.21308184870533853" blue="0.15949979182146506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="detailsView" destination="PBg-b0-eq7" id="x4f-AU-f9z"/>
+                        <outlet property="priceView" destination="U7f-Ym-ABC" id="yns-TL-LdW"/>
+                        <outlet property="storePicker" destination="pRI-Fu-TVz" id="Ulu-vQ-Qrl"/>
+                        <outlet property="titleView" destination="w2o-TB-7mJ" id="1QA-km-T4R"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BYP-Wx-JET" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1776.8" y="789.35532233883066"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="EGj-hR-M8g">
@@ -151,6 +282,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="8o9-KT-GqD">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -167,6 +299,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="tesla" width="450" height="274"/>
+        <image name="imagePick" width="300" height="300"/>
+        <image name="tesla-1" width="800" height="489"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="lrC-Hz-GsL"/>
+    </inferredMetricsTieBreakers>
 </document>
